--- a/index.html
+++ b/index.html
@@ -67,25 +67,25 @@
         <h2 class="visually-hidden">Особенности</h2>
         <div class="conteiner">
           <ul class="main-nav">
-            <li class="peculiarities-title">
+            <li class="peculiarities-title main-nav-item">
               <h3 class="peculiarities">Внимание к деталям</h3>
               <p class="peculiarities-text">
-                Идейные соображения, а также начало повседневной работы по формированию позиции.
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
-            <li class="peculiarities-title">
+            <li class="peculiarities-title main-nav-item">
               <h3 class="peculiarities">Пунктуальность</h3>
               <p class="peculiarities-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
-            <li class="peculiarities-title">
+            <li class="peculiarities-title main-nav-item">
               <h3 class="peculiarities">Планирование</h3>
               <p class="peculiarities-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
-            <li class="peculiarities-title">
+            <li class="peculiarities-title main-nav-item">
               <h3 class="peculiarities">Современные технологии</h3>
               <p class="peculiarities-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -100,7 +100,7 @@
           <h2 class="title-text">Чем мы занимаемся</h2>
 
           <ul class="main-nav applications">
-            <li>
+            <li class="main-nav-item">
               <img
                 src="./images/occupation1.jpg"
                 alt="Десктопные приложения"
@@ -108,7 +108,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="main-nav-item">
               <img
                 src="./images/occupation2.jpg"
                 alt="Мобильные приложения"
@@ -116,7 +116,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="main-nav-item">
               <img
                 src="./images/occupation3.jpg"
                 alt="Дизайнерские решения"
@@ -132,28 +132,28 @@
         <div class="conteiner">
           <h2 class="title-text">Наша команда</h2>
           <ul class="team main-nav">
-            <li class="box">
+            <li class="box main-nav-item">
               <img src="./images/team1.jpeg" alt="Product Designer" width="270" />
               <div class="team-text">
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p lang="en" class="team-profession">Product Designer</p>
               </div>
             </li>
-            <li class="box">
+            <li class="box main-nav-item">
               <img src="./images/team2.jpeg" alt="Frontend Developer" width="270" />
               <div class="team-text">
                 <h3 class="team-name">Ольга Репина</h3>
                 <p lang="en" class="team-profession">Frontend Developer</p>
               </div>
             </li>
-            <li class="box">
+            <li class="box main-nav-item">
               <img src="./images/team3.jpeg" alt="Marketing" width="270" />
               <div class="team-text">
                 <h3 class="team-name">Николай Тарасов</h3>
                 <p lang="en" class="team-profession">Marketing</p>
               </div>
             </li>
-            <li class="box">
+            <li class="box main-nav-item">
               <img src="./images/team4.jpeg" alt="UI Designer" width="270" />
               <div class="team-text">
                 <h3 class="team-name">Михаил Ермаков</h3>
