--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <!--шапка -->
     <header class="header">
-      <div class="conteiner main-nav">
+      <div class="container main-nav">
         <nav class="main-nav">
           <a href="#" lang="en" class="logo link logo-header"
             >Web<span class="studio-logo-header">Studio</span></a
@@ -56,7 +56,7 @@
     <main>
       <!-- Эффективные решения для вашего бизнеса -->
       <section class="hero">
-        <div class="conteiner">
+        <div class="container">
           <h1 class="main-text">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="buttons studio">Заказать услугу</button>
         </div>
@@ -65,7 +65,7 @@
       <section class="section">
         <!-- Особенности -->
         <h2 class="visually-hidden">Особенности</h2>
-        <div class="conteiner">
+        <div class="container">
           <ul class="main-nav">
             <li class="peculiarities-title main-nav-item">
               <h3 class="peculiarities">Внимание к деталям</h3>
@@ -96,7 +96,7 @@
       </section>
       <section class="section-main">
         <!-- Чем мы занимаемся -->
-        <div class="conteiner">
+        <div class="container">
           <h2 class="title-text">Чем мы занимаемся</h2>
 
           <ul class="main-nav applications">
@@ -129,7 +129,7 @@
       </section>
       <!-- Наша команда -->
       <section class="team-section section">
-        <div class="conteiner">
+        <div class="container">
           <h2 class="title-text">Наша команда</h2>
           <ul class="team main-nav">
             <li class="box main-nav-item">
@@ -165,7 +165,7 @@
       </section>
     </main>
     <footer class="footer-box">
-      <div class="conteiner">
+      <div class="container">
         <a href="#" lang="en" class="logo link"
           >Web
           <span class="studio-logo-footer">Studio</span>
