--- a/index.html
+++ b/index.html
@@ -171,15 +171,15 @@
           <span class="studio-logo-footer">Studio</span>
         </a>
 
-        <address class="adresses">
+        <address class="addresses">
           <ul>
-            <li class="adresses-footer-gps">
+            <li class="addresses-footer-gps">
               <a class="contact-footer link gps"> г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li class="adresses-footer-mail">
+            <li class="addresses-footer-mail">
               <a href="mailto:info@example.com" class="contact-footer link">info@example.com</a>
             </li>
-            <li class="adresses-footer-tel">
+            <li class="addresses-footer-tel">
               <a href="tel:+380991111111" class="contact-footer link">+38 099 111 11 11</a>
             </li>
           </ul>
