--- a/index.html
+++ b/index.html
@@ -43,11 +43,19 @@
         <ul class="nav-header contact">
           <li class="nav-header-title">
             <a href="mailto:info@devstudio.com" class="nav-studio contacts link">
-              info@devstudio.com</a
-            >
+              <svg class="header-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope-hover" class=""></use>
+              </svg>
+              <span>info@devstudio.com</span>
+            </a>
           </li>
           <li class="nav-header-title">
-            <a href="tel:+380961111111" class="nav-studio contacts link"> +38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="nav-studio contacts link">
+              <svg class="header-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-Vector" class=""></use>
+              </svg>
+              <span>+38 096 111 11 11</span></a
+            >
           </li>
         </ul>
       </div>
@@ -61,9 +69,8 @@
           <button type="button" class="buttons studio">Заказать услугу</button>
         </div>
       </section>
-
+      <!-- Особенности -->
       <section class="section">
-        <!-- Особенности -->
         <h2 class="visually-hidden">Особенности</h2>
         <div class="container">
           <ul class="main-nav">
@@ -94,8 +101,8 @@
           </ul>
         </div>
       </section>
+      <!-- Чем мы занимаемся -->
       <section class="section-main">
-        <!-- Чем мы занимаемся -->
         <div class="container">
           <h2 class="title-text">Чем мы занимаемся</h2>
 
@@ -137,6 +144,48 @@
               <div class="team-text">
                 <h3 class="team-name">Игорь Демьяненко</h3>
                 <p lang="en" class="team-profession">Product Designer</p>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="box main-nav-item">
@@ -144,6 +193,48 @@
               <div class="team-text">
                 <h3 class="team-name">Ольга Репина</h3>
                 <p lang="en" class="team-profession">Frontend Developer</p>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="box main-nav-item">
@@ -151,6 +242,48 @@
               <div class="team-text">
                 <h3 class="team-name">Николай Тарасов</h3>
                 <p lang="en" class="team-profession">Marketing</p>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="box main-nav-item">
@@ -158,14 +291,107 @@
               <div class="team-text">
                 <h3 class="team-name">Михаил Ермаков</h3>
                 <p lang="en" class="team-profession">UI Designer</p>
+                <ul class="team-icon-list">
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-2"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-icon-item link">
+                    <a href="" class="team-icon">
+                      <svg class="team-icon-svg" width="20" height="16.25">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                          class="team-icon-use"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--   Постійні клієнти-->
+      <section class="section">
+        <div class="container">
+          <h2 class="title-text">Постійні клієнти</h2>
+          <ul class="clients">
+            <li class="clients-icons-item link">
+              <a href="" class="clients-icon">
+                <svg class="clients-icon-svg" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo" class="clients-icon-use"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-icons-item link">
+              <a href="" class="clients-icon">
+                <svg class="clients-icon-svg" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo-1" class="clients-icon-use"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-icons-item link">
+              <a href="" class="clients-icon">
+                <svg class="clients-icon-svg" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo-2" class="clients-icon-use"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-icons-item link">
+              <a href="" class="clients-icon">
+                <svg class="clients-icon-svg" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo-3" class="clients-icon-use"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-icons-item link">
+              <a href="" class="clients-icon">
+                <svg class="clients-icon-svg" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo-4" class="clients-icon-use"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-icons-item link">
+              <a href="" class="clients-icon">
+                <svg class="clients-icon-svg" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo-5" class="clients-icon-use"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <footer class="footer-box">
-      <div class="container">
+      <div class="container footer-box-flex">
+        <div>
         <a href="#" lang="en" class="logo link"
           >Web
           <span class="studio-logo-footer">Studio</span>
@@ -184,6 +410,51 @@
             </li>
           </ul>
         </address>
+        </div>
+        <div>
+        <div class="footer-box-icon">
+          <h4 class="footer-icon-text">приєднуйтесь</h4>
+          <ul class="footer-flex">
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use
+                    href="./images/symbol-defs.svg#icon-instagram-2"
+                    class="footer-icon-use"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use href="./images/symbol-defs.svg#icon-twitter-1" class="footer-icon-use"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use
+                    href="./images/symbol-defs.svg#icon-facebook-1"
+                    class="footer-icon-use"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use
+                    href="./images/symbol-defs.svg#icon-linkedin-1"
+                    class="footer-icon-use"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
       </div>
     </footer>
   </body>
