--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
   <body>
     <!--шапка -->
     <header class="header">
-      <div class="conteiner main-nav">
+      <div class="container main-nav">
         <nav class="main-nav">
           <a href="#" lang="en" class="logo link logo-header"
             >Web<span class="studio-logo-header">Studio</span></a
@@ -42,11 +42,19 @@
         <ul class="nav-header contact">
           <li class="nav-header-title">
             <a href="mailto:info@devstudio.com" class="nav-studio contacts link">
-              info@devstudio.com</a
-            >
+              <svg class="header-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope-hover" class=""></use>
+              </svg>
+              <span>info@devstudio.com</span>
+            </a>
           </li>
           <li class="nav-header-title">
-            <a href="tel:+380961111111" class="nav-studio contacts link"> +38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="nav-studio contacts link">
+              <svg class="header-icon" width="10" height="16">
+                <use href="./images/symbol-defs.svg#icon-Vector" class=""></use>
+              </svg>
+              <span>+38 096 111 11 11</span></a
+            >
           </li>
         </ul>
       </div>
@@ -55,7 +63,7 @@
     <main>
       <!--Кнопки-->
       <section class="section-portfolio">
-        <div class="conteiner">
+        <div class="container">
           <h1 class="visually-hidden">Страница Портфолио</h1>
           <ul class="portfolio-button">
             <li>
@@ -78,7 +86,7 @@
           <ul class="box-portfolio">
             <li class="box-cart">
               <img src="./images/technoquack.jpeg" alt="technoquack" width="370" />
-              <div class="portfolio-box-text">
+              <div class="portfolio-box-text container">
                 <h2 class="header-portfolio">Технокряк</h2>
                 <p class="services-portfolio">Веб-сайт</p>
               </div>
@@ -146,21 +154,62 @@
       </section>
     </main>
     <footer class="footer-box">
-      <div class="conteiner">
+      <div class="container">
         <a href="#" lang="en" class="logo link"
           >Web
           <span class="studio-logo-footer">Studio</span>
         </a>
-        <address class="adresses">
+
+        <address class="addresses">
           <ul>
-            <li class="adresses-footer-gps">
+            <li class="addresses-footer-gps">
               <a class="contact-footer link gps"> г. Киев, пр-т Леси Украинки, 26</a>
             </li>
-            <li class="adresses-footer-mail">
+            <li class="addresses-footer-mail">
               <a href="mailto:info@example.com" class="contact-footer link">info@example.com</a>
             </li>
-            <li class="adresses-footer-tel">
+            <li class="addresses-footer-tel">
               <a href="tel:+380991111111" class="contact-footer link">+38 099 111 11 11</a>
+            </li>
+          </ul>
+
+          <ul class="footer-flex">
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use
+                    href="./images/symbol-defs.svg#icon-instagram-2"
+                    class="footer-icon-use"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use href="./images/symbol-defs.svg#icon-twitter-1" class="footer-icon-use"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use
+                    href="./images/symbol-defs.svg#icon-facebook-1"
+                    class="footer-icon-use"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icon-item link">
+              <a href="" class="footer-icon">
+                <svg class="footer-icon-svg" width="20" height="16.25">
+                  <use
+                    href="./images/symbol-defs.svg#icon-linkedin-1"
+                    class="footer-icon-use"
+                  ></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </address>
