--- a/portfolio.html
+++ b/portfolio.html
@@ -154,66 +154,72 @@
       </section>
     </main>
     <footer class="footer-box">
-      <div class="container">
-        <a href="#" lang="en" class="logo link"
+      <div class="container footer-box-flex">
+        <div>
+          <a href="#" lang="en" class="logo link"
           >Web
-          <span class="studio-logo-footer">Studio</span>
-        </a>
+            <span class="studio-logo-footer">Studio</span>
+          </a>
 
-        <address class="addresses">
-          <ul>
-            <li class="addresses-footer-gps">
-              <a class="contact-footer link gps"> г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li class="addresses-footer-mail">
-              <a href="mailto:info@example.com" class="contact-footer link">info@example.com</a>
-            </li>
-            <li class="addresses-footer-tel">
-              <a href="tel:+380991111111" class="contact-footer link">+38 099 111 11 11</a>
-            </li>
-          </ul>
-
-          <ul class="footer-flex">
-            <li class="footer-icon-item link">
-              <a href="" class="footer-icon">
-                <svg class="footer-icon-svg" width="20" height="16.25">
-                  <use
-                    href="./images/symbol-defs.svg#icon-instagram-2"
-                    class="footer-icon-use"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icon-item link">
-              <a href="" class="footer-icon">
-                <svg class="footer-icon-svg" width="20" height="16.25">
-                  <use href="./images/symbol-defs.svg#icon-twitter-1" class="footer-icon-use"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icon-item link">
-              <a href="" class="footer-icon">
-                <svg class="footer-icon-svg" width="20" height="16.25">
-                  <use
-                    href="./images/symbol-defs.svg#icon-facebook-1"
-                    class="footer-icon-use"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-icon-item link">
-              <a href="" class="footer-icon">
-                <svg class="footer-icon-svg" width="20" height="16.25">
-                  <use
-                    href="./images/symbol-defs.svg#icon-linkedin-1"
-                    class="footer-icon-use"
-                  ></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </address>
+          <address class="addresses">
+            <ul>
+              <li class="addresses-footer-gps">
+                <a class="contact-footer link gps"> г. Киев, пр-т Леси Украинки, 26</a>
+              </li>
+              <li class="addresses-footer-mail">
+                <a href="mailto:info@example.com" class="contact-footer link">info@example.com</a>
+              </li>
+              <li class="addresses-footer-tel">
+                <a href="tel:+380991111111" class="contact-footer link">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div>
+          <div class="footer-box-icon">
+            <h4 class="footer-icon-text">приєднуйтесь</h4>
+            <ul class="footer-flex">
+              <li class="footer-icon-item link">
+                <a href="" class="footer-icon">
+                  <svg class="footer-icon-svg" width="20" height="16.25">
+                    <use
+                      href="./images/symbol-defs.svg#icon-instagram-2"
+                      class="footer-icon-use"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-icon-item link">
+                <a href="" class="footer-icon">
+                  <svg class="footer-icon-svg" width="20" height="16.25">
+                    <use href="./images/symbol-defs.svg#icon-twitter-1" class="footer-icon-use"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-icon-item link">
+                <a href="" class="footer-icon">
+                  <svg class="footer-icon-svg" width="20" height="16.25">
+                    <use
+                      href="./images/symbol-defs.svg#icon-facebook-1"
+                      class="footer-icon-use"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-icon-item link">
+                <a href="" class="footer-icon">
+                  <svg class="footer-icon-svg" width="20" height="16.25">
+                    <use
+                      href="./images/symbol-defs.svg#icon-linkedin-1"
+                      class="footer-icon-use"
+                    ></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </footer>
-  </body>
+</body>
 </html>
