--- a/portfolio.html
+++ b/portfolio.html
@@ -83,17 +83,19 @@
             </li>
           </ul>
           <!--Проэкты-->
+          <div class="container">
           <ul class="box-portfolio">
             <li class="box-cart">
               <a href="" class="ddd">
               <img src="./images/technoquack.jpeg" alt="technoquack" width="370" />
-              <div class="portfolio-box-text container">
+              <div class="portfolio-box-text">
                 <h2 class="header-portfolio">Технокряк</h2>
                 <p class="services-portfolio">Веб-сайт</p>
               </div>
               </a>
             </li>
             <li class="box-cart">
+              <a href="" class="ddd">
               <img src="./images/poster.jpg" alt="poster" width="370" />
               <div class="portfolio-box-text">
                 <h2 class="header-portfolio">
@@ -101,57 +103,73 @@
                 </h2>
                 <p class="services-portfolio">Дизайн</p>
               </div>
+              </a>
             </li>
             <li class="box-cart">
+              <a href="" class="ddd">
               <img src="./images/restaurant.jpg" alt="restaurant" width="370" />
               <div class="portfolio-box-text">
                 <h2 class="header-portfolio">Ресторан <span lang="en">Seafood</span></h2>
                 <p class="services-portfolio">Приложение</p>
               </div>
+              </a>
             </li>
             <li class="box-cart">
+              <a href="" class="ddd">
               <img src="./images/prime.jpg" alt="prime" width="370" />
               <div class="portfolio-box-text">
                 <h2 class="header-portfolio">Проект <span lang="en">Prime</span></h2>
                 <p class="services-portfolio">Маркетинг</p>
               </div>
+              </a>
             </li>
             <li class="box-cart">
+              <a href="" class="ddd">
               <img src="./images/boxes.jpg" alt="boxes" width="370" />
               <div class="portfolio-box-text">
                 <h2 class="header-portfolio">Проект <span lang="en">Boxes</span></h2>
                 <p class="services-portfolio">Приложение</p>
               </div>
+              </a>
             </li>
             <li class="box-cart">
+              <a href="" class="ddd">
               <img src="./images/inspiration.jpg" alt="inspiration" width="370" />
               <div class="portfolio-box-text">
                 <h2 lang="en" class="header-portfolio">Inspiration has no Borders</h2>
                 <p class="services-portfolio">Веб-сайт</p>
               </div>
+              </a>
             </li>
             <li class="box-cart">
+              <a href="" class="ddd">
               <img src="./images/limited.jpg" alt="limited" width="370" />
               <div class="portfolio-box-text">
                 <h2 class="header-portfolio">Издание <span lang="en">Limited Edition</span></h2>
                 <p class="services-portfolio">Дизайн</p>
               </div>
+              </a>
             </li>
             <li class="box-cart">
+              <a href="" class="ddd">
               <img src="./images/lab.jpg" alt="lab" width="370" />
               <div class="portfolio-box-text">
                 <h2 class="header-portfolio">Проект <span lang="en">LAB</span></h2>
                 <p class="services-portfolio">Маркетинг</p>
               </div>
+              </a>
             </li>
             <li class="box-cart">
+              <a href="" class="ddd">
               <img src="./images/growing-business.jpg" alt="growing-business" width="370" />
               <div class="portfolio-box-text">
                 <h2 lang="en" class="header-portfolio">Growing Business</h2>
                 <p class="services-portfolio">Приложение</p>
               </div>
+              </a>
             </li>
           </ul>
+          </div>
         </div>
       </section>
     </main>
